# judgely

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
analysis/: __init__.py  plots.py  scores.py  visualizations.py
court/: __init__.py  base.py  judge.py  jury.py
pipeline/: __init__.py  query.py
src/: judge.py
utils/: __init__.py  config.py  constants.py  generators.py  startup.py
